--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,10 +12,12 @@ body {
 
 :root {
   --white-color: #f0f0f0;
+  --white2-color: #d3d3d3;
   --gray-color: #a0a0a0;
   --gray2-color: #747474;
   --black-color: #242424;
-  --black2-color: #252525;
+  --black2-color: #272727;
+  --black3-color: #3f3f3f;
   --blue-color: #0097fc;
   --dark-blue-color: #0077c7;
   --red-color: #fc0000;
@@ -32,12 +34,14 @@ body {
   --dark-purple-color: #1e00c7;
 
   --light-bg: #f0f0f0;
+  --light2-bg: #d3d3d3;
   --dark-bg: #181818;
+  --dark2-bg: #252525;
 }
 
 .App {
   width: 100%;
   height: 100vh;
-  background-color: var(--blue-color);
+  background-color: var(--black2-color);
   position: relative;
 }
