--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -499,3 +499,170 @@
     right: 3%;
   }
 }
+
+.slimbleslider {
+  width: 1000px;
+  height: 300px;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+
+.swiper-slide {
+  cursor: pointer;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  border-radius: 20px;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  &--info {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    text-align: left;
+    gap: 30%;
+    padding: 2rem;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(
+      90deg,
+      rgba(0, 0, 0, 0.804359243697479) 39%,
+      rgba(0, 0, 0, 0.4990371148459384) 59%,
+      rgba(0, 212, 255, 0) 80%
+    );
+    overflow: hidden;
+
+    &--part1 {
+      text-align: left;
+
+      &--h3 {
+        color: var(--white-color);
+        padding: 0.1rem;
+        border-radius: 10px;
+      }
+    }
+    &--part2 {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+
+      &--score {
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        gap: 15px;
+        &--image {
+          width: 30px !important;
+          height: 30px !important;
+        }
+        &--span {
+          color: var(--white-color);
+          font-size: 1.5rem;
+          font-weight: 700;
+        }
+      }
+      &--lan {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        &--image {
+          font-size: 2rem;
+          color: var(--white-color);
+        }
+        &--span {
+          font-size: 1.5rem;
+          font-weight: 700;
+          color: var(--white-color);
+        }
+      }
+    }
+    &--part3 {
+      display: flex;
+      align-items: center;
+      gap: 10%;
+      &--button {
+        padding: 0.8rem 1.5rem;
+        border-radius: 20px;
+        border: none;
+        cursor: pointer;
+        background-color: var(--blue-color);
+        font-weight: 600;
+        font-size: 1rem;
+        color: var(--white-color);
+      }
+      &--span {
+        font-size: 1rem;
+        font-weight: 700;
+        color: var(--white-color);
+      }
+    }
+  }
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+}
+
+.movielist .swiper-slide {
+  width: 200px !important;
+  height: 230px;
+}
+
+.movielist {
+  padding-top: 2rem;
+  &--movie {
+    position: relative;
+    &--poster {
+      width: 100% !important;
+      height: 100% !important;
+      border-radius: 20px;
+    }
+    &--info {
+      width: 100%;
+      position: absolute;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      bottom: 0;
+      padding: 1rem;
+      &--rating {
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        background-color: var(--yellow-color);
+        color: var(--black3-color);
+        border-radius: 50%;
+        font-size: 1rem;
+        font-weight: 900;
+        padding-top: 0.6rem;
+      }
+      &--icon {
+        font-size: 3rem;
+        color: var(--blue-color);
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.page_title {
+  font-size: 2rem;
+  color: var(--blue-color);
+  padding: 1rem;
+  font-weight: 400;
+}
