--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,13 +1,7 @@
 .layout {
-  width: 95vw;
-  height: 95vh;
   background-color: var(--dark-bg);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   display: flex;
-  border-radius: 30px;
+  padding-bottom: 5rem;
 }
 
 .pages {
