--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -54,6 +54,7 @@
           height: 75%;
           width: 2px;
           left: -10px;
+          transition: all 0.3s;
         }
       }
     }
@@ -476,16 +477,6 @@
   }
 }
 
-.dark {
-  background-color: var(--dark2-bg);
-  color: var(--white2-color);
-}
-
-.light {
-  background-color: var(--light2-bg);
-  color: var(--black2-color);
-}
-
 .active {
   display: flex;
   z-index: 99;
@@ -667,4 +658,55 @@
   color: var(--blue-color);
   padding: 1rem;
   font-weight: 400;
+}
+
+.searchlist {
+  padding: 1rem;
+  & .page_title {
+    padding-bottom: 2.5rem;
+    font-size: 1.5rem;
+  }
+  &--lists {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    &--movie {
+      width: 300px;
+      height: 350px;
+      position: relative;
+      cursor: pointer;
+      &--poster {
+        width: 100%;
+        height: 100%;
+        border-radius: 20px;
+      }
+      &--info {
+        width: 100%;
+        position: absolute;
+        bottom: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 1rem;
+        &--rating {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 10px;
+          &--vote {
+            color: var(--white-color);
+            font-weight: 600;
+          }
+          &--star {
+            color: var(--blue-color);
+            font-size: 1.5rem;
+          }
+        }
+        &--icon {
+          font-size: 2.5rem;
+          color: var(--blue-color);
+        }
+      }
+    }
+  }
 }
